--- a/env.example
+++ b/env.example
@@ -21,9 +21,13 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# JWT
+# JWT e Autenticação
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=3600
+JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-in-production
+JWT_EXPIRES_IN=86400
+JWT_REFRESH_EXPIRES_IN=604800
+JWT_ISSUER=reparaja-api
+JWT_AUDIENCE=reparaja-users
 
 # WhatsApp Business API (Meta)
 WHATSAPP_TOKEN=your-whatsapp-business-api-token
@@ -34,6 +38,8 @@ WHATSAPP_WEBHOOK_VERIFY_TOKEN=your-webhook-verify-token
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=600
+AUTH_RATE_LIMIT_WINDOW_MS=60000
+AUTH_RATE_LIMIT_MAX_REQUESTS=100
 
 # Logs
 LOG_LEVEL=info
@@ -41,6 +47,7 @@ LOG_FILE=logs/app.log
 
 # Criptografia
 ENCRYPTION_KEY=your-32-character-encryption-key
+BCRYPT_ROUNDS=12
 
 # Webhook
 WEBHOOK_SECRET=your-webhook-secret-key
@@ -69,3 +76,28 @@ MAX_FILE_SIZE=10485760
 ENABLE_IMAGE_PROCESSING=true
 THUMBNAIL_SIZE=300
 MAX_UPLOAD_FILES=10
+
+# Segurança e Autenticação
+SESSION_SECRET=your-session-secret-key
+COOKIE_SECRET=your-cookie-secret-key
+CORS_ORIGIN=http://localhost:3000,https://app.reparaja.com
+CSRF_SECRET=your-csrf-secret-key
+
+# Email (para reset de senha)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=noreply@reparaja.com
+SMTP_FROM_NAME=Repara-Já
+
+# MFA (Autenticação de Dois Fatores)
+MFA_ISSUER=Repara-Já
+MFA_ALGORITHM=SHA1
+MFA_DIGITS=6
+MFA_PERIOD=30
+
+# Auditoria e Compliance
+AUDIT_LOG_ENABLED=true
+AUDIT_LOG_RETENTION_DAYS=2555
+COMPLIANCE_MODE=lgpd
